Salvando gráficos em HTML

--- a/analise_imigrantes.ipynb
+++ b/analise_imigrantes.ipynb
@@ -3167,7 +3167,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\julio.gazoli\\AppData\\Local\\Temp\\ipykernel_12068\\2278495363.py:3: FutureWarning: \n",
+      "C:\\Users\\julio.gazoli\\AppData\\Local\\Temp\\ipykernel_20076\\2278495363.py:3: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `y` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -3198,7 +3198,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\julio.gazoli\\AppData\\Local\\Temp\\ipykernel_12068\\2278495363.py:3: FutureWarning: \n",
+      "C:\\Users\\julio.gazoli\\AppData\\Local\\Temp\\ipykernel_20076\\2278495363.py:3: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `y` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -3229,7 +3229,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\julio.gazoli\\AppData\\Local\\Temp\\ipykernel_12068\\2278495363.py:3: FutureWarning: \n",
+      "C:\\Users\\julio.gazoli\\AppData\\Local\\Temp\\ipykernel_20076\\2278495363.py:3: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `y` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -3260,7 +3260,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\julio.gazoli\\AppData\\Local\\Temp\\ipykernel_12068\\2278495363.py:3: FutureWarning: \n",
+      "C:\\Users\\julio.gazoli\\AppData\\Local\\Temp\\ipykernel_20076\\2278495363.py:3: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `y` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -3298,7 +3298,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\julio.gazoli\\AppData\\Local\\Temp\\ipykernel_12068\\2278495363.py:3: FutureWarning: \n",
+      "C:\\Users\\julio.gazoli\\AppData\\Local\\Temp\\ipykernel_20076\\2278495363.py:3: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `y` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -3329,7 +3329,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\julio.gazoli\\AppData\\Local\\Temp\\ipykernel_12068\\2278495363.py:3: FutureWarning: \n",
+      "C:\\Users\\julio.gazoli\\AppData\\Local\\Temp\\ipykernel_20076\\2278495363.py:3: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `y` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -3361,7 +3361,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\julio.gazoli\\AppData\\Local\\Temp\\ipykernel_12068\\2278495363.py:3: FutureWarning: \n",
+      "C:\\Users\\julio.gazoli\\AppData\\Local\\Temp\\ipykernel_20076\\2278495363.py:3: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `y` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -3393,7 +3393,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\julio.gazoli\\AppData\\Local\\Temp\\ipykernel_12068\\2278495363.py:3: FutureWarning: \n",
+      "C:\\Users\\julio.gazoli\\AppData\\Local\\Temp\\ipykernel_20076\\2278495363.py:3: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `y` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -3425,7 +3425,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\julio.gazoli\\AppData\\Local\\Temp\\ipykernel_12068\\2278495363.py:3: FutureWarning: \n",
+      "C:\\Users\\julio.gazoli\\AppData\\Local\\Temp\\ipykernel_20076\\2278495363.py:3: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `y` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -3457,7 +3457,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\julio.gazoli\\AppData\\Local\\Temp\\ipykernel_12068\\1968596205.py:2: FutureWarning: \n",
+      "C:\\Users\\julio.gazoli\\AppData\\Local\\Temp\\ipykernel_20076\\1968596205.py:2: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `y` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -3542,7 +3542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -4432,7 +4432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -5347,7 +5347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -6264,7 +6264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -6489,7 +6489,7 @@
        "[5 rows x 37 columns]"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6500,7 +6500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6510,7 +6510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -6644,7 +6644,7 @@
        "1984   306         5       90        142  "
       ]
      },
-     "execution_count": 66,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6655,7 +6655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -8191,6 +8191,15 @@
     "    xaxis_title='Ano',\n",
     "    yaxis_title='Número de imigrantes'\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig.write_html('imigracao_america_sul.html')"
    ]
   }
  ],
